# x-saee-esp32

./: CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  app_main.c  config.h  demo_config.h  iot_helpers.c  iot_helpers.h  iot_main.c  light.c  light.h  shadow_demo_helpers.c  shadow_demo_helpers.h  shadow_demo_main.c
